tests/__snapshots__/validation-if-argument-is-not-object-stderr.snap.txt
Error: Expected '{'.

  1 | // @tstyche if "nope"
    |                ~
  2 | 
  3 | import { expect, test } from "tstyche";
  4 | 

      at ./__typetests__/sample.tst.ts:1:16

